--- a/OfficeManagementSystem/oms-app-server/src/main/resources/application.properties
+++ b/OfficeManagementSystem/oms-app-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # setting server port number to other than default
 server.port = 8888
 
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/omsDB
 spring.datasource.username=root
@@ -10,9 +11,16 @@ spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=15
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = false
-spring.jpa.properties.hibernate.format_sql = true
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+#logging levels
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
